typesafe_builder_derive/tests/ui/11.stderr
error: Field `name` marked with `#[builder(optional)]` must be of type `Option<T>`
  --> tests/ui/11.rs:10:15
   |
10 |         name: String, // Error: not Option<String>
   |               ^^^^^^
